# oxicord-static

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix
.github/workflows/: ci.yml
docs/: UI_SPECIFICATION.md
nix/: package.nix
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dto/: auth_dto.rs  mod.rs
src/application/services/: autocomplete_service.rs  identity_resolver.rs  markdown_parser.rs  markdown_service.rs  markdown_service_test.rs  message_content_service.rs  mod.rs  notification_manager.rs  url_extractor.rs
src/application/use_cases/: login_use_case.rs  mod.rs  resolve_token_use_case.rs
src/domain/: connection.rs  keybinding.rs  mod.rs  notification.rs  search.rs  serde_utils.rs
src/domain/entities/: channel.rs  forum.rs  guild.rs  image.rs  image_stub.rs  member.rs  message.rs  mod.rs  permissions.rs  read_state.rs  relationship.rs  role.rs  token.rs  user.rs  user_cache.rs
src/domain/errors/: auth_error.rs  mod.rs  secret_error.rs
src/domain/ports/: auth_port.rs  discord_data_port.rs  gateway_port.rs  image_cache_port.rs  mod.rs  notification_port.rs  token_storage_port.rs
src/domain/services/: mod.rs  permission_calculator.rs
src/infrastructure/: clipboard.rs  mod.rs  notifications.rs  state_store.rs
src/infrastructure/config/: app_config.rs  args.rs  mod.rs  state_config.rs  storage.rs
src/infrastructure/discord/: client.rs  dto.rs  gateway.rs  identity.rs  mod.rs  scraper.rs
src/infrastructure/discord/gateway/: client.rs  codec.rs  connection.rs  constants.rs  error.rs  events.rs  heartbeat.rs  mod.rs  payloads.rs  session.rs  state.rs  typing.rs
src/infrastructure/image/: discord_cdn.rs  disk_cache.rs  loader.rs  memory_cache.rs  mod.rs
src/infrastructure/search/: mod.rs
src/infrastructure/storage/: keyring_storage.rs  keyring_storage_stub.rs  mod.rs
src/presentation/: commands.rs  mod.rs
src/presentation/events/: mod.rs
src/presentation/services/: markdown_renderer.rs
src/presentation/theme/: adapter.rs  mod.rs  service.rs
src/presentation/ui/: app.rs  backend.rs  chat_screen.rs  login_screen.rs  main_screen.rs  mod.rs  notification_popup.rs  quick_switcher.rs  splash_screen.rs  utils.rs
src/presentation/widgets/: channel_header.rs  file_explorer.rs  footer_bar.rs  guilds_tree.rs  header_bar.rs  image_state.rs  image_state_stub.rs  input.rs  mention_popup.rs  message_input.rs  message_pane.rs  mod.rs  status_bar.rs
