[package]
name = "oxicord"
version = "0.1.5"
edition = "2024"
authors = ["linuxmobile"]
description = "A lightweight, secure Discord terminal client"
license = "MIT"
repository = "https://github.com/linuxmobile/oxicord"
keywords = ["discord", "tui", "terminal", "client"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.49", features = ["full"] }

ratatui = { version = "0.30", features = ["crossterm_0_29"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-tree-widget = "0.24"
tui-textarea = "0.7"
tempfile = "3.24.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }
flate2 = "1.1.8"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

thiserror = "2.0.18"
color-eyre = "0.6.5"

toml = "0.9"
directories = "6.0"

keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "apple-native", "windows-native"] }
zeroize = { version = "1.8.1", features = ["derive"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

async-trait = "0.1.89"

dotenvy = "0.15.7"

clap = { version = "4.5.54", features = ["derive", "env"] }
syntect = "5.3.0"
tachyonfx = "0.22.0"
lru = "0.16.3"
unicode-width = "0.2.0"

# Image rendering
ratatui-image = { version = "10.0.3", features = ["crossterm"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
sha2 = "0.10.9"
hex = "0.4.3"
regex = "1.11"
tui-scrollbar = "0.2.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
